# SkyProPython

./: README.md  main.py  pyproject.toml  requirements.txt
data/: .env.example  operations.xlsx  user_config.json  user_settings.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  interface.py  logger.py  logger_config.py  masks.py  processing.py  reports.py  search_reader.py  services.py  transactions.py  utils.py  views.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reports.py  test_search_reader.py  test_services.py  test_utils.py  test_views.py  test_widget.py
