[tool.poetry]
name = "SkyPro"
version = "0.1.0"
description = "Проект для домашнего задания"
authors = ["Georgiy Bakiev <bakiyev3005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
